# ticket-cli

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  acl2_ticket.sh  c_ticket.sh  go_ticket.sh  ticket
.github/workflows/: release.yml
.tickets/: tc-00c9.md  tc-00fb.md  tc-0940.md  tc-0e69.md  tc-128e.md  tc-130b.md  tc-1609.md  tc-178a.md  tc-204e.md  tc-26e7.md  tc-32f5.md  tc-32f8.md  tc-35f6.md  tc-38a9.md  tc-3cff.md  tc-3d2f.md  tc-3f5b.md  tc-3fd4.md  tc-4e32.md  tc-4f96.md  tc-514b.md  tc-51e6.md  tc-5284.md  tc-52d1.md  tc-55a8.md  tc-5668.md  tc-5ccc.md  tc-5d93.md  tc-63cb.md  tc-65f9.md  tc-664e.md  tc-66e9.md  tc-6944.md  tc-69a8.md  tc-6df3.md  tc-7456.md  tc-76f0.md  tc-794f.md  tc-837f.md  tc-8bfc.md  (+32 more)
acl2/: README.md
acl2/ticket/: ticket.lisp
acl2/ticket/src/: cli.lisp  create.lisp  utils.lisp
c/: bdd.sh
c/ticket/: .clang-format  .clang-tidy  .gitignore  Makefile  README.md
c/ticket/src/: main.c
c/ticket/tests/: test_main.c
docs/: NEW_IMPLEMENTATION.md  SPEC.md  SPEC_REVIEW_PYTHON.md
features/: ticket_dependencies.feature
features/steps/: ticket_steps.py
go/: bdd.sh
go/ticket/: go.mod
go/ticket/cmd/ticket/: main.go
go/ticket/internal/cli/: cli.go  cli_test.go
python/: bdd.sh
python/ticket/: .gitignore  README.md  pyproject.toml
python/ticket/src/ticket/: __init__.py  cli.py
python/ticket/tests/: __init__.py  test_cli.py
scripts/: hans.py  lint.py  ticket_status.sh
typescript/: bdd.sh
typescript/ticket/src/: cli.ts
zig/: bdd.sh
zig/ticket/src/: main.zig
