[project]
name = "ticket"
version = "0.1.0"
description = "Git-backed issue tracker for AI agents"
readme = "README.md"
authors = [
    { name = "Ray Myers", email = "ray.myers@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tk = "ticket.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
